# SECYAN

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  build_package.py  docker-compose.yml  pyproject.toml  setup.py
.devcontainer/: Dockerfile  base.Dockerfile
.github/workflows/: build-docker.yml  build-python.yml  build.yml  build_macOS.yml
docker/: .dockerfile  Dockerfile  build.dockerfile  demo.dockerfile
docs/: python-lib.md
python_cpp_example.egg-info/: SOURCES.txt  top_level.txt
setup-scripts/: ubuntu.py
src/annotGenSql/: CMakeLists.txt  sqlGen.cpp  sqlGen.h
src/core/: CMakeLists.txt  party.cpp  party.h  relation.cpp  relation.h
src/example/: CMakeLists.txt  TPCH.cpp  TPCH.h  benchmark.cpp  python_demo.py  secyandemo.cpp
src/python_example/: tpch.py
src/python_wrapper/: CMakeLists.txt  example.py  party_wrapper.cpp  party_wrapper.h  relation_wrapper.cpp  relation_wrapper.h  secyan_python_wrapper.cpp
src/testSqlGen/: CMakeLists.txt  sqlGentest.cpp
src/tests/: test_basic.py
